meet the team alignment fix (#2461)
* meet the team alignment fix

* p tag fix

--- a/assets/sass/cds/_components.scss
+++ b/assets/sass/cds/_components.scss
@@ -442,16 +442,13 @@
 }
 
 .meet-us-container {
-  width: 80%;
-  justify-content: space-between;
-  margin: 0 auto;
 
   .text-margin {
     width: 70%;
   }
   p {
     @include desktop {
-      width: 70%;
+      width: 80%;
     }
   }
 }
