--- a/assets/sass/cds/_sections.scss
+++ b/assets/sass/cds/_sections.scss
@@ -843,18 +843,6 @@ span.livefr {
     }
   }
 }
-////////////////////////////////////////////////////
-//
-// OUR TEAM
-//
-////////////////////////////////////////////////////
-.our-team--listing {
-  .container {
-    @media (max-width: 1200px) {
-      width: 85%;
-    }
-  }
-}
 
 ////////////////////////////////////////////////////
 //
